removal my works

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
     <!--services area ends-->
 
-    <!--portfolio area starts-->
+    <!--portfolio area starts
 
     <div id="portfolio" class="portfolio-area section-padding">
         <div class="container">
@@ -330,8 +330,8 @@
             <div class="row">
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInLeft" data-wow-delay="0.2s">
-                        <a class="view img" href="images/portfolio/1.png"> <!--edit image-->
-                            <img src="images/portfolio/small/1.png" alt="portfolio image"> <!--edit image-->
+                        <a class="view img" href="images/portfolio/1.png"> 
+                            <img src="images/portfolio/small/1.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -341,8 +341,8 @@
                 </div>
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInDown" data-wow-delay="0.4s">
-                        <a class="view img" href="images/portfolio/2.png"> <!--edit image-->
-                            <img src="images/portfolio/small/2.png" alt="portfolio image"> <!--edit image-->
+                        <a class="view img" href="images/portfolio/2.png"> 
+                            <img src="images/portfolio/small/2.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -352,8 +352,8 @@
                 </div>
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInRight" data-wow-delay="0.6s">
-                        <a class="view img" href="images/portfolio/3.png"> <!--edit image-->
-                            <img src="images/portfolio/small/3.png" alt="portfolio image"> <!--edit image-->
+                        <a class="view img" href="images/portfolio/3.png"> 
+                            <img src="images/portfolio/small/3.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -363,8 +363,8 @@
                 </div>
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInLeft" data-wow-delay="0.8s">
-                        <a class="view img" href="images/portfolio/4.png"> <!--edit image-->
-                            <img src="images/portfolio/small/4.png" alt="portfolio image"> <!--edit image-->
+                        <a class="view img" href="images/portfolio/4.png"> 
+                            <img src="images/portfolio/small/4.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -374,8 +374,8 @@
                 </div>
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInDown" data-wow-delay="1s">
-                        <a class="view img" href="images/portfolio/5.png"> <!--edit image here-->
-                            <img src="images/portfolio/small/5.png" alt="portfolio image"> <!--edit image here-->
+                        <a class="view img" href="images/portfolio/5.png"> 
+                            <img src="images/portfolio/small/5.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -385,8 +385,8 @@
                 </div>
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInRight" data-wow-delay="1.2s">
-                        <a class="view img" href="images/portfolio/6.png"> <!--edit image here-->
-                            <img src="images/portfolio/small/6.png" alt="portfolio image"> <!--edit image here-->
+                        <a class="view img" href="images/portfolio/6.png"> 
+                            <img src="images/portfolio/small/6.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -397,7 +397,7 @@
             </div>
         </div>
     </div>
-
+-->
     <!--portfolio area ends-->
 
     <!--testimonial area starts-->
