editing and removal works

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
     <!--testimonial area starts-->
 
-    <!--Testimonial Area Starts-->
+    <!--Testimonial Area Starts
 
     <div id="testimonial" class="testimonial-area section-padding">
         <div class="container">
@@ -421,39 +421,39 @@
                         <div class="single-testimonial">
                             <div class="testimonial-content">
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
-                            </div> <!--copy and paste the best review you have got from buyer inside p tag-->
+                            </div> 
                             <div class="pic">
-                                <img src="images/testimonial/1.png" alt="testimonial image"> <!--here you can change image-->
+                                <img src="images/testimonial/1.png" alt="testimonial image"> 
                             </div>
                             <div class="testimonial-title">
-                                <h3>Jack Reacher</h3> <!--you can change the reviewer name here-->
-                                <small>Web Developer</small> <!--reviewer's designation-->
+                                <h3>Jack Reacher</h3>
+                                <small>Web Developer</small> 
                             </div>
                         </div>
 
                         <div class="single-testimonial">
                             <div class="testimonial-content">
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
-                            </div> <!--copy and paste the best review you have got from buyer inside p tag-->
+                            </div> 
                             <div class="pic">
-                                <img src="images/testimonial/2.png" alt="testimonial image"> <!--here you can change image-->
+                                <img src="images/testimonial/2.png" alt="testimonial image"> 
                             </div>
                             <div class="testimonial-title">
-                                <h3>David Doe</h3> <!--you can change the reviewer name here-->
-                                <small>Web Designer</small> <!--reviewer's designation-->
+                                <h3>David Doe</h3> 
+                                <small>Web Designer</small> 
                             </div>
                         </div>
 
                         <div class="single-testimonial">
                             <div class="testimonial-content">
                                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
-                            </div> <!--copy and paste the best review you have got from buyer inside p tag-->
+                            </div> 
                             <div class="pic">
-                                <img src="images/testimonial/3.png" alt="testimonial image"> <!--here you can change image-->
+                                <img src="images/testimonial/3.png" alt="testimonial image"> 
                             </div>
                             <div class="testimonial-title">
-                                <h3>Shane Doe</h3> <!--you can change the reviewer name here-->
-                                <small>PHP Developer</small> <!--reviewer's designation-->
+                                <h3>Shane Doe</h3>
+                                <small>PHP Developer</small> 
                             </div>
                         </div>
                     </div>
@@ -461,7 +461,7 @@
             </div>
         </div>
     </div>
-
+-->
     <!--Testimonial Area Ends-->
     <!--testimonial area ends-->
 
@@ -509,7 +509,8 @@
                                      </div>
 
                                      <h2>Address / Street</h2>
-                                     <p>No 247, Swanlake Lane, USA</p> <!--edit here-->
+                                     <p>France</p> <!--edit here-->
+                                     
                                  </div>
                              </div>
                              <div class="col-sm-4 col-md-4">
@@ -521,7 +522,7 @@
                                      </div>
 
                                      <h2>Contact Number</h2>
-                                     <p>+123 - 256 - 5456</p> <!--edit here-->
+                                     <p></p> <!--edit here-->
                                  </div>
                              </div>
                              <div class="col-sm-4 col-md-4">
@@ -533,7 +534,7 @@
                                      </div>
 
                                      <h2>Website Address</h2>
-                                     <p>www.yourwebsite.com</p> <!--edit here-->
+                                     <p>www.4technologya.com</p> <!--edit here-->
                                  </div>
                              </div>
                          </div>
