--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             <div class="row">
                 <div class="single-invite text-center">
                     <h2>do you have any project need to be done?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias at cupiditate distinctio dolorem dolores impedit, inventore magnam magni nam numquam quidem ratione rem repellendus, saepe?</p>
+                    <p> Together we make things better, let's start working on your project now</p>
                     <a href="#contact" class="my-btn-3">Get started</a>
                 </div>
             </div>
