--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                             <i class="fa fa-envelope-o"></i>
                         </div>
                         <div class="services-content">
-                            <h3>Photography</h3> <!--edit the service you give-->
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <h3>Facebook Ads</h3> <!--edit the service you give-->
+                            <p>Taste the power of facebook ads, scale your business to the moon.</p>
                         </div>
                     </div>
                 </div>
