--- a/index.html
+++ b/index.html
@@ -361,13 +361,13 @@
 
     <!--services area ends-->
 
-    <!--portfolio area starts
+    <!--portfolio area starts-->
 
     <div id="portfolio" class="portfolio-area section-padding">
         <div class="container">
             <div class="row">
                 <div class="section-header">
-                    <h2>My Works</h2>
+                    <h2>Just having fun with Ads</h2>
                     <p class="line1"></p>
                     <p class="line2"></p>
                 </div>
@@ -376,7 +376,7 @@
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInLeft" data-wow-delay="0.2s">
                         <a class="view img" href="images/portfolio/1.png"> 
-                            <img src="images/portfolio/small/1.png" alt="portfolio image"> 
+                            <img width="60%" style="border-radius:20px;" src="images/portfolio/creative-ad-2.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -387,7 +387,7 @@
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInDown" data-wow-delay="0.4s">
                         <a class="view img" href="images/portfolio/2.png"> 
-                            <img src="images/portfolio/small/2.png" alt="portfolio image"> 
+                            <img width="60%" style="border-radius:20px;" src="images/portfolio/creative-ad-1.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -398,7 +398,7 @@
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInRight" data-wow-delay="0.6s">
                         <a class="view img" href="images/portfolio/3.png"> 
-                            <img src="images/portfolio/small/3.png" alt="portfolio image"> 
+                            <img width="60%" style="border-radius:20px;" src="images/portfolio/LUNETTES.png" alt="portfolio image"> 
                         </a>
 
                         <div class="gallery-text">
@@ -406,6 +406,8 @@
                         </div>
                     </div>
                 </div>
+                
+                <!-- work 
                 <div class="col-sm-4 col-md-6 col-lg-4">
                     <div class="gallery-items wow fadeInLeft" data-wow-delay="0.8s">
                         <a class="view img" href="images/portfolio/4.png"> 
@@ -516,9 +518,6 @@
         <div class="container">
             <div class="row">
                 <div class="single-invite text-center">
-                    <h2>do you have any project need to be done?</h2>
-                    <p> Together we make things better, let's start working on your project now</p>
-                    <a href="#contact" class="my-btn-3">Get started</a>
                 </div>
             </div>
         </div>
