--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <nav>
                                     <ul class="nav navbar-nav navbar-right">
                                         <li class="active"><a class="smooth-menu" href="#home">Home</a></li>
-                                        <li><a class="smooth-menu" href="#about">About</a></li>
+                                        <li><a class="smooth-menu" href="#about">Abouts</a></li>
                                         <li><a class="smooth-menu" href="#resume">Resume</a></li>
                                         <li><a class="smooth-menu" href="#services">Services</a></li>
                                        <!--  <li><a class="smooth-menu" href="#testimonial">Testimonial</a></li> -->
